exports[`test should render a default table row content 1`] = `
<td>
  <div>
    Table Data
  </div>
</td>
`;

exports[`test should render a table row content with maximum height 1`] = `
<td
  data-max-height="small">
  <div>
    Table Data
  </div>
</td>
`;
